@@ -25,14 +25,16 @@ import com.hazelcast.util.StringUtil;
 import com.xiaoleilu.loServer.model.FriendData;
 import cn.wildfirechat.pojos.InputOutputUserBlockStatus;
 import cn.wildfirechat.common.ErrorCode;
+import io.moquette.BrokerConstants;
+import io.moquette.server.Constants;
 import io.moquette.server.Server;
 import io.moquette.spi.IMatchingCondition;
 import io.moquette.spi.IMessagesStore;
 import io.moquette.spi.security.Tokenor;
 import io.moquette.spi.impl.subscriptions.Topic;
+import io.netty.handler.codec.mqtt.MqttVersion;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import sun.misc.BASE64Encoder;
 import win.liyufan.im.*;
 
 import java.security.MessageDigest;
@@ -48,8 +50,7 @@ import java.util.concurrent.locks.ReadWriteLock;
 import java.util.concurrent.locks.ReentrantReadWriteLock;
 import java.util.function.Consumer;
 
-
-import static cn.wildfirechat.proto.ProtoConstants.ChannelStatus.Channel_Status_Destoryed;
+import static cn.wildfirechat.proto.ProtoConstants.ChannelState.Channel_State_Mask_Deleted;
 import static cn.wildfirechat.proto.ProtoConstants.GroupMemberType.*;
 import static cn.wildfirechat.proto.ProtoConstants.ModifyChannelInfoType.*;
 import static cn.wildfirechat.proto.ProtoConstants.ModifyGroupInfoType.*;
@@ -117,11 +118,63 @@ public class MemoryMessagesStore implements IMessagesStore {
     private ConcurrentHashMap<String, Boolean> userPushHiddenDetail = new ConcurrentHashMap<>();
     private ConcurrentHashMap<String, Boolean> userConvSlientMap = new ConcurrentHashMap<>();
 
+    private long mFriendRequestDuration = 7 * 24 * 60 * 60 * 1000;
+    private long mFriendRejectDuration = 30 * 24 * 60 * 60 * 1000;
+    private long mFriendRequestExpiration = 7 * 24 * 60 * 60 * 1000;
+
+    private boolean mDisableStrangerChat = false;
+
+    private long mChatroomParticipantIdleTime = 900000;
+    private boolean mChatroomRejoinWhenActive = true;
+
     MemoryMessagesStore(Server server, DatabaseStore databaseStore) {
         m_Server = server;
         this.databaseStore = databaseStore;
         IS_MESSAGE_ROAMING = "1".equals(m_Server.getConfig().getProperty(MESSAGE_ROAMING));
         IS_MESSAGE_REMOTE_HISTORY_MESSAGE = "1".equals(m_Server.getConfig().getProperty(MESSAGE_Remote_History_Message));
+        Constants.MAX_MESSAGE_QUEUE = Integer.parseInt(m_Server.getConfig().getProperty(MESSAGE_Max_Queue));
+
+        try {
+            mDisableStrangerChat = Boolean.parseBoolean(m_Server.getConfig().getProperty(BrokerConstants.MESSAGE_Disable_Stranger_Chat));
+        } catch (Exception e) {
+            e.printStackTrace();
+            Utility.printExecption(LOG, e);
+        }
+
+        try {
+            mFriendRequestDuration = Long.parseLong(m_Server.getConfig().getProperty(FRIEND_Repeat_Request_Duration));
+        } catch (Exception e) {
+            e.printStackTrace();
+            Utility.printExecption(LOG, e);
+        }
+
+        try {
+            mFriendRejectDuration = Long.parseLong(m_Server.getConfig().getProperty(FRIEND_Reject_Request_Duration));
+        } catch (Exception e) {
+            e.printStackTrace();
+            Utility.printExecption(LOG, e);
+        }
+
+        try {
+            mFriendRequestExpiration = Long.parseLong(m_Server.getConfig().getProperty(FRIEND_Request_Expiration_Duration));
+        } catch (Exception e) {
+            e.printStackTrace();
+            Utility.printExecption(LOG, e);
+        }
+
+        try {
+            mChatroomRejoinWhenActive = Boolean.parseBoolean(m_Server.getConfig().getProperty(BrokerConstants.CHATROOM_Rejoin_When_Active));
+        } catch (Exception e) {
+            e.printStackTrace();
+            Utility.printExecption(LOG, e);
+        }
+
+        try {
+            mChatroomParticipantIdleTime = Long.parseLong(m_Server.getConfig().getProperty(CHATROOM_Participant_Idle_Time, "900000"));
+        } catch (Exception e) {
+            e.printStackTrace();
+            Utility.printExecption(LOG, e);
+        }
     }
 
     @Override
@@ -177,12 +230,24 @@ public class MemoryMessagesStore implements IMessagesStore {
 
 
     @Override
-    public int getNotifyReceivers(String fromUser, WFCMessage.Message.Builder messageBuilder, Set<String> notifyReceivers) {
+    public int getNotifyReceivers(String fromUser, WFCMessage.Message.Builder messageBuilder, Set<String> notifyReceivers, boolean ignoreMsg) {
         WFCMessage.Message message = messageBuilder.build();
         HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
         int type = message.getConversation().getType();
+        int pullType = ProtoConstants.PullType.Pull_Normal;
 
-        int pullType = 0;
+        if (ignoreMsg) {
+            if (type == ProtoConstants.ConversationType.ConversationType_ChatRoom) {
+                pullType = ProtoConstants.PullType.Pull_ChatRoom;
+            }
+
+            if (message.getContent().getPersistFlag() != Transparent) {
+                notifyReceivers.add(fromUser);
+            }
+            return pullType;
+        }
+
+
         if (type == ProtoConstants.ConversationType.ConversationType_Private) {
             notifyReceivers.add(fromUser);
             notifyReceivers.add(message.getConversation().getTarget());
@@ -192,8 +257,17 @@ public class MemoryMessagesStore implements IMessagesStore {
 
             if (!StringUtil.isNullOrEmpty(message.getToUser())) {
                 notifyReceivers.add(message.getToUser());
-            } else if(!message.getToList().isEmpty()) {
-                notifyReceivers.addAll(message.getToList());
+            } else if(message.getToList()!=null && !message.getToList().isEmpty()) {
+                MultiMap<String, WFCMessage.GroupMember> groupMembers = hzInstance.getMultiMap(GROUP_MEMBERS);
+                Collection<WFCMessage.GroupMember> members = groupMembers.get(message.getConversation().getTarget());
+                if (members == null || members.size() == 0) {
+                    members = loadGroupMemberFromDB(hzInstance, message.getConversation().getTarget());
+                }
+                for (WFCMessage.GroupMember member : members) {
+                    if (member.getType() != GroupMemberType_Removed && message.getToList().contains(member.getMemberId())) {
+                        notifyReceivers.add(member.getMemberId());
+                    }
+                }
             } else {
                 MultiMap<String, WFCMessage.GroupMember> groupMembers = hzInstance.getMultiMap(GROUP_MEMBERS);
                 Collection<WFCMessage.GroupMember> members = groupMembers.get(message.getConversation().getTarget());
@@ -230,14 +304,19 @@ public class MemoryMessagesStore implements IMessagesStore {
             if (channelInfo != null) {
                 notifyReceivers.add(fromUser);
                 if (channelInfo.getOwner().equals(fromUser)) {
-                    if (StringUtil.isNullOrEmpty(message.getToUser())) {
-                        MultiMap<String, String> listeners = hzInstance.getMultiMap(CHANNEL_LISTENERS);
-                        notifyReceivers.addAll(listeners.get(message.getConversation().getTarget()));
-                    } else {
-                        MultiMap<String, String> listeners = hzInstance.getMultiMap(CHANNEL_LISTENERS);
-                        if (listeners.values().contains(message.getToUser())) {
+                    Collection<String> listeners = getChannelListener(message.getConversation().getTarget());
+                    if (!StringUtil.isNullOrEmpty(message.getToUser())) {
+                        if (listeners.contains(message.getToUser())) {
                             notifyReceivers.add(message.getToUser());
                         }
+                    } else if(message.getToList() != null && !message.getToList().isEmpty()) {
+                        for (String to:message.getToList()) {
+                            if (listeners.contains(to)) {
+                                notifyReceivers.add(to);
+                            }
+                        }
+                    } else {
+                        notifyReceivers.addAll(listeners);
                     }
                 } else {
                     if (StringUtil.isNullOrEmpty(channelInfo.getCallback()) || channelInfo.getAutomatic() == 0) {
@@ -348,8 +427,17 @@ public class MemoryMessagesStore implements IMessagesStore {
                             continue;
                         }
 
+                        if (bundle.getMessage().getContent().getExpireDuration() > 0) {
+                            if (System.currentTimeMillis() < bundle.getMessage().getServerTimestamp() + bundle.getMessage().getContent().getExpireDuration()) {
+                                continue;
+                            }
+                        }
+
                         size += bundle.getMessage().getSerializedSize();
-                        if (size >= 1 * 1024 * 1024) { //3M
+                        if (size >= 512 * 1024) { //3M
+                            if(builder.getMessageCount() == 0){
+                                builder.addMessage(bundle.getMessage());
+                            }
                             break;
                         }
                         builder.addMessage(bundle.getMessage());
@@ -528,13 +616,29 @@ public class MemoryMessagesStore implements IMessagesStore {
     @Override
     public boolean checkUserClientInChatroom(String user, String clientId, String chatroomId) {
         MemorySessionStore.Session session = m_Server.getStore().sessionsStore().getSession(clientId);
-        if (session == null || System.currentTimeMillis() - session.getLastChatroomActiveTime() > 5 * 60 * 1000) {
-            handleQuitChatroom(user, clientId, chatroomId);
-            return false;
-        }
 
         String existChatroomId = (String)m_Server.getHazelcastInstance().getMap(USER_CHATROOM).get(user);
-        if (StringUtil.isNullOrEmpty(existChatroomId) && (chatroomId == null || !existChatroomId.equals(chatroomId))) {
+        if (chatroomId == null) {
+            if (existChatroomId == null) {
+                return false;
+            } else {
+                chatroomId = existChatroomId;
+            }
+        }
+
+        if (StringUtil.isNullOrEmpty(existChatroomId) || !existChatroomId.equals(chatroomId)) {
+            if (mChatroomRejoinWhenActive) {
+                if (!StringUtil.isNullOrEmpty(existChatroomId)) {
+                    handleQuitChatroom(user, clientId, existChatroomId);
+                }
+                handleJoinChatroom(user, clientId, chatroomId);
+            } else {
+                return false;
+            }
+        }
+
+        if (!mChatroomRejoinWhenActive && !checkChatroomParticipantIdelTime(session)) {
+            handleQuitChatroom(user, clientId, chatroomId);
             return false;
         }
 
@@ -684,7 +788,11 @@ public class MemoryMessagesStore implements IMessagesStore {
         List<WFCMessage.GroupMember> tmp = new ArrayList<>();
         ArrayList<String> newInviteUsers = new ArrayList<>();
         for (WFCMessage.GroupMember member : memberList) {
-            member = member.toBuilder().setType(ProtoConstants.GroupMemberType.GroupMemberType_Normal).setUpdateDt(updateDt).setAlias("").build();
+            if (member.getMemberId().equals(groupInfo.getOwner())) {
+                member = member.toBuilder().setType(GroupMemberType_Owner).setUpdateDt(updateDt).setAlias("").build();
+            } else {
+                member = member.toBuilder().setType(GroupMemberType_Normal).setUpdateDt(updateDt).setAlias("").build();
+            }
             tmp.add(member);
             newInviteUsers.add(member.getMemberId());
         }
@@ -772,7 +880,31 @@ public class MemoryMessagesStore implements IMessagesStore {
         }
 
         if (groupInfo.getType() != ProtoConstants.GroupType.GroupType_Free && groupInfo.getOwner() != null && groupInfo.getOwner().equals(operator)) {
-            return ErrorCode.ERROR_CODE_NOT_RIGHT;
+            MultiMap<String, WFCMessage.GroupMember> groupMembers = hzInstance.getMultiMap(GROUP_MEMBERS);
+            Collection<WFCMessage.GroupMember> members = groupMembers.get(groupId);
+            if (members == null || members.size() == 0) {
+                members = loadGroupMemberFromDB(hzInstance, groupId);
+            }
+
+            WFCMessage.GroupMember newOwner = null;
+            for (WFCMessage.GroupMember member :members) {
+                if (!member.getMemberId().equals(operator) && member.getType() != GroupMemberType_Removed) {
+                    newOwner = member;
+                    break;
+                }
+            }
+
+            if (newOwner == null) {
+                 return dismissGroup(operator, groupId, false);
+            }
+
+            transferGroup(operator, groupId, newOwner.getMemberId(), false);
+
+            try {
+                Thread.sleep(500);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
         }
 
         removeGroupMember(groupId, Arrays.asList(operator));
@@ -780,6 +912,18 @@ public class MemoryMessagesStore implements IMessagesStore {
         removeGroupUserSettings(groupId, Arrays.asList(operator));
         return ErrorCode.ERROR_CODE_SUCCESS;
     }
+
+    @Override
+    public void clearUserGroups(String userId) {
+        Set<String> groupIds = databaseStore.getUserGroupIds(userId);
+        int[] removedCount = new int[1];
+        for (String groupId : groupIds) {
+            removedCount[0] = 0;
+            ErrorCode errorCode = quitGroup(userId, groupId);
+            LOG.info("clear user {} group {} result {}", userId, groupId, errorCode);
+        }
+    }
+
 
     private void removeGroupUserSettings(String groupId, List<String> users) {
         HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
@@ -972,6 +1116,11 @@ public class MemoryMessagesStore implements IMessagesStore {
     }
 
     @Override
+    public Set<String> getUserGroupIds(String userId) {
+        return databaseStore.getUserGroupIds(userId);
+    }
+
+    @Override
     public ErrorCode getGroupMembers(String groupId, long maxDt, List<WFCMessage.GroupMember> members) {
         HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
         IMap<String, WFCMessage.GroupInfo> mIMap = hzInstance.getMap(GROUPS_MAP);
@@ -1039,25 +1188,31 @@ public class MemoryMessagesStore implements IMessagesStore {
 
         //check the new owner is in member list? is that necessary?
         long updateDt = System.currentTimeMillis();
-        groupInfo = groupInfo.toBuilder().setOwner(newOwner).setUpdateDt(updateDt).build();
-
+        groupInfo = groupInfo.toBuilder().setOwner(newOwner).setUpdateDt(updateDt).setMemberUpdateDt(updateDt).build();
         mIMap.set(groupId, groupInfo);
+
         MultiMap<String, WFCMessage.GroupMember> groupMembers = hzInstance.getMultiMap(GROUP_MEMBERS);
         Collection<WFCMessage.GroupMember> members = groupMembers.get(groupId);
         if (members == null || members.size() == 0) {
             members = loadGroupMemberFromDB(hzInstance, groupId);
         }
+        int modifyMemeberCount = 0;
         for (WFCMessage.GroupMember member : members) {
+            if (modifyMemeberCount == 2) {
+                break;
+            }
             if (newOwner.equals(member.getMemberId())) {
                 groupMembers.remove(groupId, member);
                 member = member.toBuilder().setType(GroupMemberType_Owner).setUpdateDt(updateDt).build();
                 databaseStore.persistGroupMember(groupId, Arrays.asList(member));
                 groupMembers.put(groupId, member);
+                modifyMemeberCount++;
             } else if(member.getType() == GroupMemberType_Owner) {
                 groupMembers.remove(groupId, member);
                 member = member.toBuilder().setType(GroupMemberType_Normal).setUpdateDt(updateDt).build();
                 databaseStore.persistGroupMember(groupId, Arrays.asList(member));
                 groupMembers.put(groupId, member);
+                modifyMemeberCount++;
             }
         }
 
@@ -1138,8 +1293,9 @@ public class MemoryMessagesStore implements IMessagesStore {
         if (members == null || members.size() == 0) {
             members = loadGroupMemberFromDB(hzInstance, groupId);
         }
-        for (WFCMessage.GroupMember member : members
-            ) {
+
+        boolean isInGroup = false;
+        for (WFCMessage.GroupMember member : members) {
             if (member.getMemberId().equals(memberId)) {
                 if (member.getType() == GroupMemberType_Silent) {
                     return ErrorCode.ERROR_CODE_NOT_RIGHT;
@@ -1152,9 +1308,14 @@ public class MemoryMessagesStore implements IMessagesStore {
                 if (member.getMemberId().equals(memberId) && member.getType() == GroupMemberType_Removed) {
                     return ErrorCode.ERROR_CODE_NOT_IN_GROUP;
                 }
+                isInGroup = true;
                 break;
             }
 
+        }
+
+        if (!isInGroup) {
+            return ErrorCode.ERROR_CODE_NOT_IN_GROUP;
         }
 
         return ErrorCode.ERROR_CODE_SUCCESS;
@@ -1169,7 +1330,10 @@ public class MemoryMessagesStore implements IMessagesStore {
         if (messageBundle != null) {
             WFCMessage.Message message = messageBundle.getMessage();
             boolean canRecall = false;
-            if (message.getFromUser().equals(operatorId)) {
+            if (isAdmin) {
+                canRecall = true;
+            }
+            if (!isAdmin && message.getFromUser().equals(operatorId)) {
                 canRecall = true;
             }
 
@@ -1219,6 +1383,18 @@ public class MemoryMessagesStore implements IMessagesStore {
         } else {
             return ErrorCode.ERROR_CODE_NOT_EXIST;
         }
+    }
+
+    @Override
+    public void clearUserMessages(String userId) {
+        mWriteLock.lock();
+        try {
+            userMessages.remove(userId);
+        } finally {
+            mWriteLock.unlock();
+        }
+
+        databaseStore.clearUserMessage(userId);
     }
 
     @Override
@@ -1275,7 +1451,7 @@ public class MemoryMessagesStore implements IMessagesStore {
     }
 
     @Override
-    public ErrorCode modifyUserInfo(String userId, WFCMessage.ModifyMyInfoRequest request) {
+    public ErrorCode modifyUserInfo(String userId, WFCMessage.ModifyMyInfoRequest request) throws Exception {
         HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
         IMap<String, WFCMessage.User> mUserMap = hzInstance.getMap(USERS);
 
@@ -1324,7 +1500,8 @@ public class MemoryMessagesStore implements IMessagesStore {
                     modified = true;
                     break;
                 case Modify_Social:
-
+                    builder.setSocial(entry.getValue());
+                    modified = true;
                     break;
                 case Modify_Extra:
                     builder.setExtra(entry.getValue());
@@ -1338,8 +1515,8 @@ public class MemoryMessagesStore implements IMessagesStore {
         if (modified) {
             builder.setUpdateDt(System.currentTimeMillis());
             user = builder.build();
+            databaseStore.updateUser(user);
             mUserMap.set(userId, user);
-//            databaseStore.updateUser(user);
             return ErrorCode.ERROR_CODE_SUCCESS;
         } else {
             return ErrorCode.ERROR_CODE_NOT_MODIFIED;
@@ -1384,11 +1561,30 @@ public class MemoryMessagesStore implements IMessagesStore {
     }
 
     @Override
-    public void addUserInfo(WFCMessage.User user, String password) {
+    public void addUserInfo(WFCMessage.User user, String password) throws Exception {
         HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
         IMap<String, WFCMessage.User> mUserMap = hzInstance.getMap(USERS);
+        databaseStore.updateUser(user);
         mUserMap.put(user.getUid(), user);
         databaseStore.updateUserPassword(user.getUid(), password);
+    }
+
+    @Override
+    public void destoryUser(String userId) {
+        HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
+        IMap<String, WFCMessage.User> mUserMap = hzInstance.getMap(USERS);
+        WFCMessage.User us = mUserMap.get(userId);
+        if (us != null) {
+            us = WFCMessage.User.newBuilder().setUid(userId).setUpdateDt(System.currentTimeMillis()).setDisplayName("").setName(userId).setDeleted(1).build();
+            try {
+                databaseStore.updateUser(us);
+            } catch (Exception e) {
+                e.printStackTrace();
+                Utility.printExecption(LOG, e);
+            }
+            mUserMap.put(userId, us);
+        }
+
     }
 
     @Override
@@ -1415,8 +1611,8 @@ public class MemoryMessagesStore implements IMessagesStore {
         return getUserInfo(userId);
     }
     @Override
-    public List<WFCMessage.User> searchUser(String keyword, boolean buzzy, int page) {
-        return databaseStore.searchUserFromDB(keyword, buzzy, page);
+    public List<WFCMessage.User> searchUser(String keyword, int searchType, int page) {
+        return databaseStore.searchUserFromDB(keyword, searchType, page);
     }
 
     @Override
@@ -1541,27 +1737,49 @@ public class MemoryMessagesStore implements IMessagesStore {
     }
 
     @Override
-    public boolean isBlacked(String fromUser, String userId) {
+    public ErrorCode isAllowUserMessage(String targetUser, String fromUser) {
         HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
         MultiMap<String, FriendData> friendsMap = hzInstance.getMultiMap(USER_FRIENDS);
 
-        Collection<FriendData> friendDatas = friendsMap.get(fromUser);
+        Collection<FriendData> friendDatas = friendsMap.get(targetUser);
 
         if (friendDatas == null || friendDatas.size() == 0) {
-            friendDatas = loadFriend(friendsMap, fromUser);
+            friendDatas = loadFriend(friendsMap, targetUser);
         }
 
         for (FriendData friendData : friendDatas) {
-            if (friendData.getFriendUid().equals(userId)) {
-                if (friendData.getState() == 2) {
-                    return true;
+            if (friendData.getFriendUid().equals(fromUser)) {
+                if (friendData.getBlacked() == 1) {
+                    return ErrorCode.ERROR_CODE_IN_BLACK_LIST;
                 } else {
-                    return false;
+                    if (friendData.getState() == 0) {
+                        return ErrorCode.ERROR_CODE_SUCCESS;
+                    } else {
+                        break;
+                    }
                 }
             }
         }
 
-        return false;
+        if (mDisableStrangerChat) {
+            //在禁止私聊时，允许机器人，物联网设备及管理员进行私聊。
+            IMap<String, WFCMessage.User> mUserMap = hzInstance.getMap(USERS);
+            WFCMessage.User target = mUserMap.get(targetUser);
+            if (target != null && target.getType() != ProtoConstants.UserType.UserType_Normal) {
+                return ErrorCode.ERROR_CODE_SUCCESS;
+            }
+            target = mUserMap.get(fromUser);
+            if (target != null && target.getType() != ProtoConstants.UserType.UserType_Normal) {
+                return ErrorCode.ERROR_CODE_SUCCESS;
+            }
+            //admin的usertype为3，所以不需要hardcode为admin添加例外
+//            if (targetUser.equals("admin") || fromUser.equals("admin")) {
+//                return ErrorCode.ERROR_CODE_SUCCESS;
+//            }
+            return ErrorCode.ERROR_CODE_NOT_RIGHT;
+        }
+
+        return ErrorCode.ERROR_CODE_SUCCESS;
     }
 
     @Override
@@ -1589,8 +1807,7 @@ public class MemoryMessagesStore implements IMessagesStore {
                 String pwd_md5 = rs.getString(2);
                 try {
                     MessageDigest md5 = MessageDigest.getInstance("MD5");
-                    BASE64Encoder base64en = new BASE64Encoder();
-                    String passwdMd5 = base64en.encode(md5.digest(password.getBytes("utf-8")));
+                    String passwdMd5 = Base64.getEncoder().encodeToString(md5.digest(password.getBytes("utf-8")));
                     if (passwdMd5.equals(pwd_md5)) {
                         LOG.info("login success userName={}, userId={}", name, uid);
                         userIdRet.add(uid);
@@ -1645,7 +1862,7 @@ public class MemoryMessagesStore implements IMessagesStore {
     }
 
     @Override
-    public List<FriendData> getFriendList(String userId, long version) {
+    public List<FriendData> getFriendList(String userId, String clientId, long version) {
         List<FriendData> out = new ArrayList<FriendData>();
 
         HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
@@ -1655,13 +1872,55 @@ public class MemoryMessagesStore implements IMessagesStore {
             friends = loadFriend(friendsMap, userId);
         }
 
+        boolean needFriendMigrate = false;
+
+        if (!StringUtil.isNullOrEmpty(clientId)) {
+            MemorySessionStore.Session session = m_Server.getStore().sessionsStore().getSession(clientId);
+            if(session != null && session.getMqttVersion() != null && session.getMqttVersion().protocolLevel() < MqttVersion.Wildfire_2.protocolLevel()) {
+                needFriendMigrate = true;
+            }
+        }
+
         for (FriendData friend : friends) {
             if (friend.getTimestamp() > version) {
-                out.add(friend);
+                if (needFriendMigrate) {
+                    if (friend.getBlacked() > 0) {
+                        friend.setState(2);
+                    }
+                    out.add(friend);
+                } else {
+                    out.add(friend);
+                }
+
             }
         }
 
         return out;
+    }
+
+    @Override
+    public void clearUserFriend(String userId) {
+        HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
+        MultiMap<String, FriendData> friendsMap = hzInstance.getMultiMap(USER_FRIENDS);
+
+        Collection<FriendData> friendDatas = friendsMap.get(userId);
+        if (friendDatas == null || friendDatas.size() == 0) {
+            friendDatas = loadFriend(friendsMap, userId);
+        }
+
+        databaseStore.removeUserFriend(userId);
+        databaseStore.removeUserFriendRequest(userId);
+
+        MultiMap<String, WFCMessage.FriendRequest> requestMap = hzInstance.getMultiMap(USER_FRIENDS_REQUEST);
+        requestMap.remove(userId);
+
+
+        if (friendDatas != null) {
+            for (FriendData fd : friendDatas) {
+                friendsMap.remove(fd.getFriendUid());
+            }
+            friendsMap.remove(userId);
+        }
     }
 
     @Override
@@ -1703,15 +1962,33 @@ public class MemoryMessagesStore implements IMessagesStore {
         }
 
         if (existRequest != null && existRequest.getStatus() != ProtoConstants.FriendRequestStatus.RequestStatus_Accepted) {
-            if (System.currentTimeMillis() - existRequest.getUpdateDt() > 7 * 24 * 60 * 60 * 1000) {
+            if (mFriendRequestDuration > 0 && System.currentTimeMillis() - existRequest.getUpdateDt() > mFriendRequestDuration) {
                 if (existRequest.getStatus() == ProtoConstants.FriendRequestStatus.RequestStatus_Rejected
-                    && System.currentTimeMillis() - existRequest.getUpdateDt() < 30 * 24 * 60 * 60 * 1000) {
+                    && System.currentTimeMillis() - existRequest.getUpdateDt() < mFriendRejectDuration) {
                     return ErrorCode.ERROR_CODE_FRIEND_REQUEST_BLOCKED;
                 }
             } else {
                 return ErrorCode.ERROR_CODE_FRIEND_ALREADY_REQUEST;
             }
         }
+
+        MultiMap<String, FriendData> friendsMap = hzInstance.getMultiMap(USER_FRIENDS);
+
+        FriendData friendData1 = null;
+        Collection<FriendData> friendDatas = friendsMap.get(userId);
+        if (friendDatas == null || friendDatas.size() == 0) {
+            friendDatas = loadFriend(friendsMap, userId);
+        }
+        for (FriendData fd : friendDatas) {
+            if (fd.getFriendUid().equals(request.getTargetUid())) {
+                friendData1 = fd;
+                break;
+            }
+        }
+        if (friendData1 != null && friendData1.getBlacked() > 0) {
+            return ErrorCode.ERROR_CODE_IN_BLACK_LIST;
+        }
+
         WFCMessage.FriendRequest newRequest = WFCMessage.FriendRequest
             .newBuilder()
             .setFromUid(userId)
@@ -1763,9 +2040,10 @@ public class MemoryMessagesStore implements IMessagesStore {
                 }
             }
             if (friendData1 == null) {
-                friendData1 = new FriendData(userId, request.getTargetUid(), "", request.getStatus(), System.currentTimeMillis());
+                friendData1 = new FriendData(userId, request.getTargetUid(), "", request.getExtra(), request.getStatus(), 0, System.currentTimeMillis());
             } else {
                 friendData1.setState(request.getStatus());
+                friendData1.setExtra(request.getExtra());
                 friendData1.setTimestamp(System.currentTimeMillis());
             }
 
@@ -1785,7 +2063,7 @@ public class MemoryMessagesStore implements IMessagesStore {
                     }
                 }
                 if (friendData2 == null) {
-                    friendData2 = new FriendData(request.getTargetUid(), userId, "", request.getStatus(), friendData1.getTimestamp());
+                    friendData2 = new FriendData(request.getTargetUid(), userId, "", request.getExtra(), request.getStatus(), 0, friendData1.getTimestamp());
                 } else {
                     friendsMap.remove(request.getTargetUid(), friendData2);
                     friendData2.setState(request.getStatus());
@@ -1819,29 +2097,30 @@ public class MemoryMessagesStore implements IMessagesStore {
         }
 
         if (existRequest != null) {
-            if (System.currentTimeMillis() - existRequest.getUpdateDt() > 7 * 24 * 60 * 60 * 1000) {
-                return ErrorCode.ERROR_CODE_FRIEND_REQUEST_OVERTIME;
+            if (mFriendRequestExpiration > 0 && System.currentTimeMillis() - existRequest.getUpdateDt() > mFriendRequestExpiration) {
+                return ErrorCode.ERROR_CODE_FRIEND_REQUEST_EXPIRED;
             } else {
-                existRequest = existRequest.toBuilder().setStatus(ProtoConstants.FriendRequestStatus.RequestStatus_Accepted).setUpdateDt(System.currentTimeMillis()).build();
+                existRequest = existRequest.toBuilder().setStatus(request.getStatus()).setUpdateDt(System.currentTimeMillis()).build();
                 databaseStore.persistOrUpdateFriendRequest(existRequest);
-                MultiMap<String, FriendData> friendsMap = hzInstance.getMultiMap(USER_FRIENDS);
+                if(request.getStatus() == ProtoConstants.FriendRequestStatus.RequestStatus_Accepted){
+                    MultiMap<String, FriendData> friendsMap = hzInstance.getMultiMap(USER_FRIENDS);
+                    FriendData friendData1 = new FriendData(userId, request.getTargetUid(), "", request.getExtra(), 0, 0, System.currentTimeMillis());
+                    databaseStore.persistOrUpdateFriendData(friendData1);
 
-                FriendData friendData1 = new FriendData(userId, request.getTargetUid(), "", 0, System.currentTimeMillis());
-                databaseStore.persistOrUpdateFriendData(friendData1);
+                    FriendData friendData2 = new FriendData(request.getTargetUid(), userId, "", request.getExtra(), 0, 0, friendData1.getTimestamp());
+                    databaseStore.persistOrUpdateFriendData(friendData2);
 
-                FriendData friendData2 = new FriendData(request.getTargetUid(), userId, "", 0, friendData1.getTimestamp());
-                databaseStore.persistOrUpdateFriendData(friendData2);
+                    requestMap.remove(userId);
+                    requestMap.remove(request.getTargetUid());
+                    friendsMap.remove(userId);
+                    friendsMap.remove(request.getTargetUid());
 
-                requestMap.remove(userId);
-                requestMap.remove(request.getTargetUid());
-                friendsMap.remove(userId);
-                friendsMap.remove(request.getTargetUid());
+                    heads[0] = friendData2.getTimestamp();
+                    heads[1] = friendData1.getTimestamp();
 
-                heads[0] = friendData2.getTimestamp();
-                heads[1] = friendData1.getTimestamp();
-
-                msgBuilder.setConversation(WFCMessage.Conversation.newBuilder().setTarget(userId).setLine(0).setType(ProtoConstants.ConversationType.ConversationType_Private).build());
-                msgBuilder.setContent(WFCMessage.MessageContent.newBuilder().setType(1).setSearchableContent(existRequest.getReason()).build());
+                    msgBuilder.setConversation(WFCMessage.Conversation.newBuilder().setTarget(userId).setLine(0).setType(ProtoConstants.ConversationType.ConversationType_Private).build());
+                    msgBuilder.setContent(WFCMessage.MessageContent.newBuilder().setType(1).setSearchableContent(existRequest.getReason()).build());
+                }
                 return ErrorCode.ERROR_CODE_SUCCESS;
             }
         } else {
@@ -1851,6 +2130,12 @@ public class MemoryMessagesStore implements IMessagesStore {
 
     @Override
     public ErrorCode blackUserRequest(String fromUser, String targetUserId, int state, long[] heads) {
+        if (state == 2) {
+            state = 1;
+        } else {
+            state = 0;
+        }
+
         HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
         MultiMap<String, FriendData> friendsMap = hzInstance.getMultiMap(USER_FRIENDS);
 
@@ -1868,9 +2153,9 @@ public class MemoryMessagesStore implements IMessagesStore {
         }
 
         if (friendData == null) {
-            friendData = new FriendData(fromUser, targetUserId, "", state, System.currentTimeMillis());
+            friendData = new FriendData(fromUser, targetUserId, "", "", 1, state, System.currentTimeMillis());
         }
-        friendData.setState(state);
+        friendData.setBlacked(state);
         friendData.setTimestamp(System.currentTimeMillis());
 
 
@@ -1880,6 +2165,25 @@ public class MemoryMessagesStore implements IMessagesStore {
         heads[0] = friendData.getTimestamp();
 
         return ErrorCode.ERROR_CODE_SUCCESS;
+    }
+
+    @Override
+    public FriendData getFriendData(String fromUser, String targetUserId) {
+        HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
+        MultiMap<String, FriendData> friendsMap = hzInstance.getMultiMap(USER_FRIENDS);
+
+        Collection<FriendData> friends = friendsMap.get(fromUser);
+        if (friends == null || friends.size() == 0) {
+            friends = loadFriend(friendsMap, fromUser);
+        }
+
+        for (FriendData fd:friends) {
+            if (fd.getFriendUid().equals(targetUserId)) {
+                return fd;
+            }
+        }
+
+        return null;
     }
 
     @Override
@@ -1947,6 +2251,18 @@ public class MemoryMessagesStore implements IMessagesStore {
     }
 
     @Override
+    public boolean checkChatroomParticipantIdelTime(MemorySessionStore.Session session) {
+        if (session == null) {
+            return false;
+        }
+
+        if(mChatroomParticipantIdleTime > 0 && System.currentTimeMillis() - session.getLastChatroomActiveTime() > mChatroomParticipantIdleTime) {
+            return false;
+        }
+        return true;
+    }
+
+    @Override
     public ErrorCode deleteFriend(String userId, String friendUid, long[] head) {
         HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
         MultiMap<String, FriendData> friendsMap = hzInstance.getMultiMap(USER_FRIENDS);
@@ -1991,6 +2307,8 @@ public class MemoryMessagesStore implements IMessagesStore {
     public ErrorCode getUserSettings(String userId, long version, WFCMessage.GetUserSettingResult.Builder builder) {
         HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
         MultiMap<String, WFCMessage.UserSettingEntry> userSettingMap = hzInstance.getMultiMap(USER_SETTING);
+        IMap<String, WFCMessage.GroupInfo> mGroups = hzInstance.getMap(GROUPS_MAP);
+        IMap<String, WFCMessage.ChannelInfo> mChannels = hzInstance.getMap(CHANNELS);
 
         Collection<WFCMessage.UserSettingEntry> entries = userSettingMap.get(userId);
         if (entries == null || entries.size() == 0) {
@@ -1998,12 +2316,52 @@ public class MemoryMessagesStore implements IMessagesStore {
         }
 
         ErrorCode ec = ErrorCode.ERROR_CODE_NOT_MODIFIED;
+        Calendar c = Calendar.getInstance();
+        c.setTime(new Date());
+        c.add(Calendar.MONTH, -1);
+        long monthAgo = c.getTimeInMillis();
+
         if (entries != null) {
             for (WFCMessage.UserSettingEntry entry : entries
             ) {
                 if (entry.getUpdateDt() > version) {
                     ec = ErrorCode.ERROR_CODE_SUCCESS;
-                    builder.addEntry(entry);
+                    boolean skip = false;
+                    if (version == 0 && entry.getUpdateDt() > monthAgo) {
+                        if (entry.getScope() == UserSettingScope.kUserSettingConversationSync) {
+                            try {
+                                String key = entry.getKey();
+                                int pos1 = key.indexOf('-');
+                                String typeStr = key.substring(0, pos1);
+                                int type = Integer.parseInt(typeStr);
+                                if (type == ProtoConstants.ConversationType.ConversationType_Group
+                                    || type == ProtoConstants.ConversationType.ConversationType_Channel) {
+                                    int pos2 = key.indexOf('-', pos1 + 1);
+                                    String target = key.substring(pos2 + 1);
+
+                                    if (type == ProtoConstants.ConversationType.ConversationType_Group) {
+                                        WFCMessage.GroupInfo groupInfo = mGroups.get(target);
+                                        if (groupInfo == null) {
+                                            skip = true;
+                                        }
+                                    } else {
+                                        WFCMessage.ChannelInfo channelInfo = mChannels.get(target);
+                                        if (channelInfo == null) {
+                                            skip = true;
+                                        }
+                                    }
+                                }
+                            } catch (Exception e) {
+                                e.printStackTrace();
+                                Utility.printExecption(LOG, e);
+                            }
+
+                        }
+                    }
+
+                    if (!skip) {
+                        builder.addEntry(entry);
+                    }
                 }
             }
         }
@@ -2100,6 +2458,14 @@ public class MemoryMessagesStore implements IMessagesStore {
     }
 
     @Override
+    public void clearUserSettings(String userId) {
+        databaseStore.clearUserSetting(userId);
+        HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
+        MultiMap<String, WFCMessage.UserSettingEntry> userSettingMap = hzInstance.getMultiMap(USER_SETTING);
+        userSettingMap.remove(userId);
+    }
+
+    @Override
     public boolean getUserGlobalSlient(String userId) {
         Boolean slient = userGlobalSlientMap.get(userId);
         if (slient == null) {
@@ -2118,7 +2484,7 @@ public class MemoryMessagesStore implements IMessagesStore {
     public boolean getUserPushHiddenDetail(String userId) {
         Boolean hidden = userPushHiddenDetail.get(userId);
         if (hidden == null) {
-            WFCMessage.UserSettingEntry entry = getUserSetting(userId, UserSettingScope.kUserSettingGlobalSilent, null);
+            WFCMessage.UserSettingEntry entry = getUserSetting(userId, UserSettingScope.kUserSettingHiddenNotificationDetail, null);
             if (entry == null || !entry.getValue().equals("1")) {
                 hidden = false;
             } else {
@@ -2157,6 +2523,12 @@ public class MemoryMessagesStore implements IMessagesStore {
     }
 
     @Override
+    public void clearUserChannels(String userId) {
+
+    }
+
+
+    @Override
     public ErrorCode modifyChannelInfo(String operator, String channelId, int modifyType, String value) {
         HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
         IMap<String, WFCMessage.ChannelInfo> mIMap = hzInstance.getMap(CHANNELS);
@@ -2190,8 +2562,9 @@ public class MemoryMessagesStore implements IMessagesStore {
         else if(modifyType == Modify_Channel_OnlyCallback) {
             try {
                 newInfoBuilder.setAutomatic(Integer.parseInt(value));
-            } catch (NumberFormatException e) {
+            } catch (Exception e) {
                 e.printStackTrace();
+                Utility.printExecption(LOG, e);
             }
         }
 
@@ -2245,7 +2618,7 @@ public class MemoryMessagesStore implements IMessagesStore {
 
         WFCMessage.ChannelInfo.Builder newInfoBuilder = oldInfo.toBuilder();
 
-        newInfoBuilder.setStatus(Channel_Status_Destoryed);
+        newInfoBuilder.setStatus(oldInfo.getStatus() | Channel_State_Mask_Deleted);
         newInfoBuilder.setUpdateDt(System.currentTimeMillis());
         mIMap.put(channelId, newInfoBuilder.build());
         return ErrorCode.ERROR_CODE_SUCCESS;
@@ -2261,6 +2634,8 @@ public class MemoryMessagesStore implements IMessagesStore {
         HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
         MultiMap<String, String> listeners = hzInstance.getMultiMap(CHANNEL_LISTENERS);
 
+        getChannelListener(channelId);
+
         if (listen) {
             listeners.put(channelId, operator);
         } else {
@@ -2269,6 +2644,19 @@ public class MemoryMessagesStore implements IMessagesStore {
         databaseStore.updateChannelListener(channelId, operator, listen);
 
         return ErrorCode.ERROR_CODE_SUCCESS;
+    }
+
+    private Collection<String> getChannelListener(String channelId) {
+        HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
+        MultiMap<String, String> listeners = hzInstance.getMultiMap(CHANNEL_LISTENERS);
+        Collection<String> result = listeners.get(channelId);
+        if (result.isEmpty()) {
+            result = databaseStore.getChannelListener(channelId);
+            for (String userId : result) {
+                listeners.put(channelId, userId);
+            }
+        }
+        return result;
     }
 
     @Override
@@ -2280,12 +2668,12 @@ public class MemoryMessagesStore implements IMessagesStore {
 
     @Override
     public boolean checkUserInChannel(String user, String channelId) {
-        MultiMap<String, String> chatroomMembers = m_Server.getHazelcastInstance().getMultiMap(CHANNEL_LISTENERS);
+        Collection<String> chatroomMembers = getChannelListener(channelId);
         if (chatroomMembers == null) {
             return false;
         }
 
-        if(!chatroomMembers.containsEntry(channelId, user)) {
+        if(!chatroomMembers.contains(user)) {
             IMap<String, WFCMessage.ChannelInfo> mIMap = m_Server.getHazelcastInstance().getMap(CHANNELS);
             WFCMessage.ChannelInfo info = mIMap.get(channelId);
             if (info == null || !info.getOwner().equals(user)) {
@@ -2293,6 +2681,16 @@ public class MemoryMessagesStore implements IMessagesStore {
             }
         }
         return true;
+    }
+
+    @Override
+    public Collection<String> getChannelSubscriber(String channelId) {
+        MultiMap<String, String> channelMembers = m_Server.getHazelcastInstance().getMultiMap(CHANNEL_LISTENERS);
+        if (channelMembers == null) {
+            return new ArrayList<>();
+        }
+
+        return channelMembers.get(channelId);
     }
 
     @Override
@@ -2317,6 +2715,7 @@ public class MemoryMessagesStore implements IMessagesStore {
             words) {
             databaseStore.deleteSensitiveWord(word);
         }
+        lastUpdateSensitiveTime = 0;
         return true;
     }
 
@@ -2440,7 +2839,7 @@ public class MemoryMessagesStore implements IMessagesStore {
         }
         return UUIDGenerator.getUUID();
     }
-    
+
     @Override
     public void storeRetained(Topic topic, StoredMessage storedMessage) {
         LOG.debug("Store retained message for topic={}, CId={}", topic, storedMessage.getClientID());
